fix(security): Refactor CORS config